; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_vnode_label_externalize_audit.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_vnode_label_externalize_audit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i32 }
%struct.mac = type { i32, i32 }

@vnode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_vnode_label_externalize_audit(%struct.vnode* %0, %struct.mac* %1) #0 {
  %3 = alloca %struct.vnode*, align 8
  %4 = alloca %struct.mac*, align 8
  %5 = alloca i32, align 4
  store %struct.vnode* %0, %struct.vnode** %3, align 8
  store %struct.mac* %1, %struct.mac** %4, align 8
  %6 = load i32, i32* @vnode, align 4
  %7 = load %struct.vnode*, %struct.vnode** %3, align 8
  %8 = getelementptr inbounds %struct.vnode, %struct.vnode* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.mac*, %struct.mac** %4, align 8
  %11 = getelementptr inbounds %struct.mac, %struct.mac* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.mac*, %struct.mac** %4, align 8
  %14 = getelementptr inbounds %struct.mac, %struct.mac* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @MAC_EXTERNALIZE_AUDIT(i32 %6, i32 %9, i32 %12, i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @MAC_EXTERNALIZE_AUDIT(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
